libece X.Y ():
	- API: ECE-specific extensions (ECE_TYPE_SECE defined on win32)
	- SB: remove curly brackets around Qt's uuid representation
	- op_cert: CN based on CSR template value if provided (user can give a label)
	- rename: {cacert,cert,key}1 => init_{ca,cert,key},
	  {cacaert,cert,key}2 => op_{ca,cert,key}
	- bindings: fix typo in sb_conf_get_vpn_ip()
	- sbsim/contrib: produce and test OpenVPN server
	- config: fix debug messages not being displayed; fix timeout not configurable
	- test: retries on failure

libece 0.4 (31/10/2013):
	- new host names: initialization-host, operation-host
	- ignore errors about not matching certificate/hostname
	- set a different host name for the command getConfiguration
	- bindings: use distutils for build/install; added relative include and
	  library dirs
	- api: return ECE_RC_INVALIDCERT upon certification validation failures;
	  return ECE_RC_BADCONFIG upon bad configuration (ece.json)
	- logging: log level can be configured at runtime in ece.json (log/lev)
	- sbsim: make certs valid from yesterday to avoid races
	- build: temporarily use qtjson (Yocto TODO)

libece 0.3 (25/09/2013):
	- fix certificate request encoding
	- commands paths changed
	- digest changed to SHA1
	- Content-Type changed to -ww-form-urlencoded
	- bindings: basic swig-based python bindings
	- fixes: minor leak in Client::run; ECE_RC_TIMEOUT sometimes not being returned;
	  remove spurious getHwInfo in __name_cb(); removed old json Content-Type;
	  fix encoding of special chars not handled by addQueryItem() - e.g. newline
	- config: improved defaults handling
	- build: runtime prefix by setting ECE_PREFIX_PATH
	- test/sb += automated credential generation and SB simulator setup
	- crypto: ece_crypto_genkey() failed if no rnd file was detected
	- yocto wip: added LICENSE file
	- ece_revision() returns GIT commit ID
	- contrib: produce.sh extensions
	- SB API: getInfo returns Operation CA Cert; s/csr_tmpl/csr_template
	- added .gitignore
