@@ -2,8 +2,6 @@
 
 Prerequisites: 
     - add appropriate "initialization-host" "operation-host" definitions to /etc/hosts
-    - change fields in /etc/ssl/openssl.cnf policy_match section to "optional"
-    instead of "required" to avoid openssl bug in ASN1 type matching
 
 $ cd sb
 $ ./inst.sh
